# PythonScrapyAI

./: ReadMe.md  pyproject.toml  requirements.txt
app/demo/: grop_llm.py
