# ---------------------- PEP 621核心配置（必须有，解决uv的错误） ----------------------
[project]
name = "pythonscrapyai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "goose3>=3.1.21",
    "matplotlib>=3.9.4",
    "newspaper3k>=0.2.8",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "poetry>=2.2.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.6.1",
    "selenium>=4.36.0",
    "tensorflow>=2.20.0",
    "trafilatura>=2.0.0",
]

# 主索引源（优先级最高）
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
# 备用索引源（主源找不到时用）
extra-index-url = ["https://pypi.org/simple/"]
# 可选：禁用默认的 PyPI 源（避免冗余）
no-default-index = true
